Send pointerleave and pointerenter events for styluses on Mac.

We should send the correct pointerleave and pointerenter events when the stylus leaves or enters
the proximity of the tablet on Mac. We will check isEnteringProximity on NSTabletProximity event
to decide the position of styluses. Now we only consider about a simple case that there is only
one pointer device.

The details of how we send pointer leave and enter events are in the doc:
https://docs.google.com/document/d/1O_unOvamElhB_FANTMFJjjG9OIgCxZNGTVSfJzecaSk/

BUG=624810

Review-Url: https://codereview.chromium.org/2373733002
Cr-Commit-Position: refs/heads/master@{#448729}

Former-commit-id: e97eb52977dd7ed3936227f0d240cfeed865e520